--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ asttokens==2.0.8
 astunparse==1.6.3
 async-timeout @ file:///opt/conda/conda-bld/async-timeout_1664876359750/work
 attrs @ file:///croot/attrs_1668696182826/work
+autoeda==0.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
